markup: EUID App UI board main page validation
엠터 이듬 앱 UI board 메인 페이지 마크업 validation 진행 후 마크업 수정 완료

resolves:

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -534,6 +534,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.flex {
+  display: flex;
+}
+
 .text-indigo-500 {
   --tw-text-opacity: 1;
   color: rgb(99 102 241 / var(--tw-text-opacity));
