--- a/client/views/board/login.html
+++ b/client/views/board/login.html
@@ -9,8 +9,8 @@
       href="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500"
       type="image/xml+svg"
     />
-    <link rel="stylesheet" href="./css/main.css" />
-    <script src="./js/main.js" type="module"></script>
+    <link rel="stylesheet" href="../../css/main.css" />
+    <script src="../../js/main.js" type="module"></script>
     <title>project</title>
   </head>
 
