--- a/client/views/start/index.html
+++ b/client/views/start/index.html
@@ -8,13 +8,13 @@
     href="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500"
     type="image/xml+svg"
     />
-    <link rel="stylesheet" href="./../css/main.css" />
-    <title>시작 페이지</title>
+    <link rel="stylesheet" href="../../css/main.css" />
+    <title>최초 랜딩 페이지</title>
 </head>
-<body>
-    <div class="wrapper flex flex-col w-[320px] h-[693px] bg-red-50 ">
+<body> 
+    <div class="wrapper flex flex-col w-[320px] h-[693px] bg-red-50 text-center">
         
-        <article>
+        <article class="topBat w-[320px] h-[37px]">
             <!-- 상단 영역(시간, 배터리)
             <header class="mainHeader locationHeader">
                 <h2 class="a11yHidden">기본 정보</h2>
@@ -37,9 +37,9 @@
                 </div>
             </header>-->
         </article>
-        <main>
+        <main class="startMain w-[320px] h-[400px] bg-slate-50">
             <figure>
-                <img class="mainLogoin " src="svg 스프라이트로 로고 삽입(how)" alt="이듬 로고" />
+                <img class="mainLogoin w-[84.5px] h-[30.73px] items-center bg-slate-500" src="svg 스프라이트로 로고 삽입(how)" alt="이듬 로고" />
                 <figcaption class="mainWrod">
                     <p class="mainTitle">당신 곁에 엔터이듬</p>
                     <p class="mainSummary">With EUID's 함께 성장하기 <br>함께 배우고 적용하며 성장해보세요!</p>
@@ -47,7 +47,7 @@
             </figure>
         </main>
         <section class="bottom">
-            <button class="startBtn" onclick= "location.href='category.html'">시작하기</button>
+            <button class="startBt w-[301px] w-[] -green2" type="button" onclick= "location.href='category.html'">시작하기</button>
                 <p class="exist">이미 계정이 있나요?
                     <a class="login" href="login.html">로그인</a>
                 </p>
