Markup: Update title & h1
title과 h1의 내용을 일부 변경했습니다.

fixes: 추후 조원들과 논의 후 내용 변경 가능성 있음

--- a/client/views/main/exchange.html
+++ b/client/views/main/exchange.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko-KR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>배추마켓 - 판매 목록</title>
+    <title>Super 4y 엔터이듬</title>
     <link
       rel="stylesheet preload"
       as="style"
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <h1 class="a11yHidden">배추마켓</h1>
+    <h1 class="a11yHidden">엔터이듬</h1>
 
     <header>
       <h2 class="a11yHidden">기본 정보</h2>
@@ -49,28 +49,13 @@
         </div>
         <ul class="headerList">
           <li class="headerItem">
-            <a
-              class="sprite spriteSearch"
-              aria-label="검색"
-              href="search.html"
-              tabindex="0"
-            ></a>
+            <a class="sprite spriteSearch" aria-label="검색" href="search.html" tabindex="0"></a>
           </li>
           <li class="headerItem">
-            <a
-              class="sprite spriteMenu"
-              href="/"
-              aria-label="메뉴"
-              tabindex="0"
-            ></a>
+            <a class="sprite spriteMenu" href="/" aria-label="메뉴" tabindex="0"></a>
           </li>
           <li class="headerItem">
-            <a
-              class="sprite spriteAlarm"
-              href="/"
-              aria-label="알림"
-              tabindex="0"
-            ></a>
+            <a class="sprite spriteAlarm" href="/" aria-label="알림" tabindex="0"></a>
           </li>
         </ul>
       </div>
@@ -135,11 +120,7 @@
       <ul class="exchangeList">
         <li class="exchangeItem">
           <a href="productInfo.html" class="exchangeLink">
-            <img
-              src="/images/imglightgray_bg.png"
-              alt="제품 이미지"
-              class="exchangeImg"
-            />
+            <img src="/images/imglightgray_bg.png" alt="제품 이미지" class="exchangeImg" />
             <div class="exchangeContent">
               <p class="exchangeTitle">2017 mac pro</p>
               <p class="exchangePlace">
@@ -160,11 +141,7 @@
         </li>
         <li class="exchangeItem">
           <a href="productInfo.html" class="exchangeLink">
-            <img
-              src="/images/imglightgray_bg.png"
-              alt="제품 이미지"
-              class="exchangeImg"
-            />
+            <img src="/images/imglightgray_bg.png" alt="제품 이미지" class="exchangeImg" />
             <div class="exchangeContent">
               <p class="exchangeTitle">2017 mac pro</p>
               <p class="exchangePlace">
@@ -185,11 +162,7 @@
         </li>
         <li class="exchangeItem">
           <a href="productInfo.html" class="exchangeLink">
-            <img
-              src="/images/imglightgray_bg.png"
-              alt="제품 이미지"
-              class="exchangeImg"
-            />
+            <img src="/images/imglightgray_bg.png" alt="제품 이미지" class="exchangeImg" />
             <div class="exchangeContent">
               <p class="exchangeTitle">ipad 2세대 애플펜슬</p>
               <p class="exchangePlace">
@@ -210,11 +183,7 @@
         </li>
         <li class="exchangeItem">
           <a href="productInfo.html" class="exchangeLink">
-            <img
-              src="/images/imglightgray_bg.png"
-              alt="제품 이미지"
-              class="exchangeImg"
-            />
+            <img src="/images/imglightgray_bg.png" alt="제품 이미지" class="exchangeImg" />
             <div class="exchangeContent">
               <p class="exchangeTitle">2017 mac pro</p>
               <p class="exchangePlace">
@@ -235,11 +204,7 @@
         </li>
         <li class="exchangeItem">
           <a href="productInfo.html" class="exchangeLink">
-            <img
-              src="/images/imglightgray_bg.png"
-              alt="제품 이미지"
-              class="exchangeImg"
-            />
+            <img src="/images/imglightgray_bg.png" alt="제품 이미지" class="exchangeImg" />
             <div class="exchangeContent">
               <p class="exchangeTitle">2017 mac pro</p>
               <p class="exchangePlace">
@@ -260,11 +225,7 @@
         </li>
         <li class="exchangeItem">
           <a href="productInfo.html" class="exchangeLink">
-            <img
-              src="/images/imglightgray_bg.png"
-              alt="제품 이미지"
-              class="exchangeImg"
-            />
+            <img src="/images/imglightgray_bg.png" alt="제품 이미지" class="exchangeImg" />
             <div class="exchangeContent">
               <p class="exchangeTitle">2017 mac pro</p>
               <p class="exchangePlace">
@@ -285,11 +246,7 @@
         </li>
         <li class="exchangeItem">
           <a href="productInfo.html" class="exchangeLink">
-            <img
-              src="/images/imglightgray_bg.png"
-              alt="제품 이미지"
-              class="exchangeImg"
-            />
+            <img src="/images/imglightgray_bg.png" alt="제품 이미지" class="exchangeImg" />
             <div class="exchangeContent">
               <p class="exchangeTitle">2017 mac pro</p>
               <p class="exchangePlace">
@@ -310,11 +267,7 @@
         </li>
         <li class="exchangeItem">
           <a href="productInfo.html" class="exchangeLink">
-            <img
-              src="/images/imglightgray_bg.png"
-              alt="제품 이미지"
-              class="exchangeImg"
-            />
+            <img src="/images/imglightgray_bg.png" alt="제품 이미지" class="exchangeImg" />
             <div class="exchangeContent">
               <p class="exchangeTitle">2017 mac pro</p>
               <p class="exchangePlace">
@@ -335,11 +288,7 @@
         </li>
         <li class="exchangeItem">
           <a href="productInfo.html" class="exchangeLink">
-            <img
-              src="/images/imglightgray_bg.png"
-              alt="제품 이미지"
-              class="exchangeImg"
-            />
+            <img src="/images/imglightgray_bg.png" alt="제품 이미지" class="exchangeImg" />
             <div class="exchangeContent">
               <p class="exchangeTitle">2017 mac pro</p>
               <p class="exchangePlace">
@@ -359,12 +308,7 @@
           </a>
         </li>
       </ul>
-      <button
-        onclick="location.href='/views/board/writeBoard.html' "
-        class="plusButton"
-      >
-        +
-      </button>
+      <button onclick="location.href='/views/board/writeBoard.html' " class="plusButton">+</button>
       <ul class="exchangeWrite">
         <li class="writeList"><a href="/" class="writeItem">헤드셋</a></li>
         <li class="writeList"><a href="/" class="writeItem">키보드</a></li>
