--- a/client/views/main/main.html
+++ b/client/views/main/main.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko-KR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>배추마켓</title>
+    <title>Super 4y 엔터이듬</title>
     <link
       rel="stylesheet preload"
       as="style"
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <h1 class="a11yHidden">배추마켓</h1>
+    <h1 class="a11yHidden">엔터이듬</h1>
 
     <header>
       <h2 class="a11yHidden">기본 정보</h2>
@@ -49,28 +49,13 @@
         </div>
         <ul class="headerList">
           <li class="headerItem">
-            <a
-              class="sprite spriteSearch"
-              href="/"
-              aria-label="검색"
-              tabindex="0"
-            ></a>
+            <a class="sprite spriteSearch" href="/" aria-label="검색" tabindex="0"></a>
           </li>
           <li class="headerItem">
-            <a
-              class="sprite spriteMenu"
-              href="/"
-              aria-label="메뉴"
-              tabindex="0"
-            ></a>
+            <a class="sprite spriteMenu" href="/" aria-label="메뉴" tabindex="0"></a>
           </li>
           <li class="headerItem">
-            <a
-              class="sprite spriteAlarm"
-              href="/"
-              aria-label="알림"
-              tabindex="0"
-            ></a>
+            <a class="sprite spriteAlarm" href="/" aria-label="알림" tabindex="0"></a>
           </li>
         </ul>
       </div>
@@ -122,12 +107,7 @@
         <a href="/" class="swiperLink">자세히 보기</a>
         <div class="swiperNumber">
           <span class="swiperNo1">01</span>
-          <img
-            src="/images/bar.png"
-            alt=""
-            class="swiperLine"
-            aria-hidden="true"
-          />
+          <img src="/images/bar.png" alt="" class="swiperLine" aria-hidden="true" />
           <span class="swiperNo3">03</span>
         </div>
       </section>
@@ -155,90 +135,44 @@
         <ul class="storyList">
           <li class="storyItem">
             <a href="/" class="">
-              <img
-                class="storyImg"
-                src="/images/imggray_bg.png"
-                alt="프로필사진"
-              />
-              <p class="storyTitle">
-                디자인에 대해 하나도 알지 못했던 내가 취업할 수 있었던 이유
-              </p>
-              <p class="storyUser">
-                UIUX <span aria-hidden="true">&#124;</span> 1기 수강생 박치열
-              </p>
+              <img class="storyImg" src="/images/imggray_bg.png" alt="프로필사진" />
+              <p class="storyTitle">디자인에 대해 하나도 알지 못했던 내가 취업할 수 있었던 이유</p>
+              <p class="storyUser">UIUX <span aria-hidden="true">&#124;</span> 1기 수강생 박치열</p>
             </a>
           </li>
           <li class="storyItem">
             <a href="/" class="">
-              <img
-                class="storyImg"
-                src="/images/imggray_bg.png"
-                alt="프로필사진"
-              />
-              <p class="storyTitle">
-                영문과 전공생에서 UIUX 디자이너로 취업하기까지
-              </p>
-              <p class="storyUser">
-                UIUX <span aria-hidden="true">&#124;</span> 3기 수강생 김진우
-              </p>
+              <img class="storyImg" src="/images/imggray_bg.png" alt="프로필사진" />
+              <p class="storyTitle">영문과 전공생에서 UIUX 디자이너로 취업하기까지</p>
+              <p class="storyUser">UIUX <span aria-hidden="true">&#124;</span> 3기 수강생 김진우</p>
             </a>
           </li>
           <li class="storyItem">
             <a href="/" class="">
-              <img
-                class="storyImg"
-                src="/images/imggray_bg.png"
-                alt="프로필사진"
-              />
+              <img class="storyImg" src="/images/imggray_bg.png" alt="프로필사진" />
               <p class="storyTitle">7기 수강생의 삼성으로 가는 피그마 노하우</p>
-              <p class="storyUser">
-                UIUX <span aria-hidden="true">&#124;</span> 7기 수강생 김삼성
-              </p>
+              <p class="storyUser">UIUX <span aria-hidden="true">&#124;</span> 7기 수강생 김삼성</p>
             </a>
           </li>
           <li class="storyItem">
             <a href="/" class="storyTitle">
-              <img
-                class="storyImg"
-                src="/images/imggray_bg.png"
-                alt="프로필사진"
-              />
-              <p class="storyTitle">
-                배울 때 내가 가장 힘들었던 A-Z 야, 너도 할 수 있어!
-              </p>
-              <p class="storyUser">
-                UIUX <span aria-hidden="true">&#124;</span> 4기 수강생 김환휘
-              </p>
+              <img class="storyImg" src="/images/imggray_bg.png" alt="프로필사진" />
+              <p class="storyTitle">배울 때 내가 가장 힘들었던 A-Z 야, 너도 할 수 있어!</p>
+              <p class="storyUser">UIUX <span aria-hidden="true">&#124;</span> 4기 수강생 김환휘</p>
             </a>
           </li>
           <li class="storyItem">
             <a href="/" class="">
-              <img
-                class="storyImg"
-                src="/images/imggray_bg.png"
-                alt="프로필사진"
-              />
-              <p class="storyTitle">
-                나는 프론트일까? 백일까? 여전히 모르겠다면 물어봐!
-              </p>
-              <p class="storyUser">
-                UIUX <span aria-hidden="true">&#124;</span> 2기 수강생 최혜수
-              </p>
+              <img class="storyImg" src="/images/imggray_bg.png" alt="프로필사진" />
+              <p class="storyTitle">나는 프론트일까? 백일까? 여전히 모르겠다면 물어봐!</p>
+              <p class="storyUser">UIUX <span aria-hidden="true">&#124;</span> 2기 수강생 최혜수</p>
             </a>
           </li>
           <li class="storyItem">
             <a href="/" class="">
-              <img
-                class="storyImg"
-                src="/images/imggray_bg.png"
-                alt="프로필사진"
-              />
-              <p class="storyTitle">
-                코딩과 디자인의 그 어딘가 두가지 모두 하고 싶은 욕심쟁이
-              </p>
-              <p class="storyUser">
-                UIUX <span aria-hidden="true">&#124;</span> 5기 수강생 염진희
-              </p>
+              <img class="storyImg" src="/images/imggray_bg.png" alt="프로필사진" />
+              <p class="storyTitle">코딩과 디자인의 그 어딘가 두가지 모두 하고 싶은 욕심쟁이</p>
+              <p class="storyUser">UIUX <span aria-hidden="true">&#124;</span> 5기 수강생 염진희</p>
             </a>
           </li>
         </ul>
