--- a/client/views/main/search.html
+++ b/client/views/main/search.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Super 4y 엔터 이듬</title>
+    <title>Super 4y 엔터이듬</title>
     <link
       rel="stylesheet preload"
       as="style"
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <h1 class="a11yHidden">배추마켓</h1>
+    <h1 class="a11yHidden">엔터이듬</h1>
     <header class="mainHeader searchHeader">
       <h2 class="a11yHidden">기본 정보</h2>
       <div class="timeWrapper">
