--- a/client/views/main/productInfo.html
+++ b/client/views/main/productInfo.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko-KR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>배추마켓 - 상세 페이지</title>
+    <title>Super 4y 엔터이듬</title>
     <link
       rel="stylesheet preload"
       as="style"
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <h1 class="a11yHidden">배추마켓</h1>
+    <h1 class="a11yHidden">엔터이듬</h1>
     <header>
       <h2 class="a11yHidden">기본 정보</h2>
       <div class="timeWrapper">
@@ -37,38 +37,18 @@
       <div class="statusBar">
         <ul class="headerList">
           <li class="headerItem">
-            <a
-              class="sprite spriteBack"
-              aria-label="뒤로가기"
-              href="search.html"
-              tabindex="0"
-            ></a>
+            <a class="sprite spriteBack" aria-label="뒤로가기" href="search.html" tabindex="0"></a>
           </li>
           <li class="headerItem">
-            <a
-              class="sprite spriteHome"
-              href="./main.html"
-              aria-label="홈"
-              tabindex="0"
-            ></a>
+            <a class="sprite spriteHome" href="./main.html" aria-label="홈" tabindex="0"></a>
           </li>
         </ul>
         <ul class="headerList">
           <li class="headerItem">
-            <a
-              class="sprite spriteShare"
-              aria-label="공유"
-              href="search.html"
-              tabindex="0"
-            ></a>
+            <a class="sprite spriteShare" aria-label="공유" href="search.html" tabindex="0"></a>
           </li>
           <li class="headerItem">
-            <a
-              class="sprite spriteMore"
-              href="/"
-              aria-label="더보기"
-              tabindex="0"
-            ></a>
+            <a class="sprite spriteMore" href="/" aria-label="더보기" tabindex="0"></a>
           </li>
         </ul>
       </div>
@@ -87,11 +67,7 @@
           <dt class="sellerName">맥이뜸</dt>
           <dd class="sellerLocation">응암동</dd>
           <dd>
-            <img
-              src="/images/imggray_bg.png"
-              alt="판매자 이미지"
-              class="sellerImage"
-            />
+            <img src="/images/imggray_bg.png" alt="판매자 이미지" class="sellerImage" />
           </dd>
         </dl>
         <div>
@@ -105,13 +81,11 @@
         <div class="productDetail">
           <span class="productTitle">2020 MacBook Air M1</span>
           <span class="productRelease"
-            >컴퓨터 &middot;
-            <time datetime="2023-06-25T02:29">17분전</time></span
+            >컴퓨터 &middot; <time datetime="2023-06-25T02:29">17분전</time></span
           >
           <p class="productBrief">
             상태 깨끗하고 좋아요 <br />
-            왜냐하면 맥을 사용할 줄 몰라서 넷플릭스용으로만 봤어요. 집근처에서
-            거래 희망합니다.
+            왜냐하면 맥을 사용할 줄 몰라서 넷플릭스용으로만 봤어요. 집근처에서 거래 희망합니다.
           </p>
         </div>
       </section>
@@ -121,44 +95,28 @@
         <ul class="relatedList">
           <li class="realtedItem">
             <a href="/" class="relatedContents__link">
-              <img
-                src="/images/imggray_bg.png"
-                alt="상품이미지"
-                class="relatedContents__img"
-              />
+              <img src="/images/imggray_bg.png" alt="상품이미지" class="relatedContents__img" />
               <p class="relatedContents__title">스타벅스 아메리카노</p>
               <p class="relatedContents__price">10,000원</p>
             </a>
           </li>
           <li class="realtedItem">
             <a href="/" class="relatedContents__link">
-              <img
-                src="/images/imggray_bg.png"
-                alt="상품이미지"
-                class="relatedContents__img"
-              />
+              <img src="/images/imggray_bg.png" alt="상품이미지" class="relatedContents__img" />
               <p class="relatedContents__title">로지텍 키보드</p>
               <p class="relatedContents__price">80,000원</p>
             </a>
           </li>
           <li class="realtedItem">
             <a href="/" class="relatedContents__link">
-              <img
-                src="/images/imggray_bg.png"
-                alt="상품이미지"
-                class="relatedContents__img"
-              />
+              <img src="/images/imggray_bg.png" alt="상품이미지" class="relatedContents__img" />
               <p class="relatedContents__title">스타벅스 아메리카노</p>
               <p class="relatedContents__price">10,000원</p>
             </a>
           </li>
           <li class="realtedItem">
             <a href="/" class="relatedContents__link">
-              <img
-                src="/images/imggray_bg.png"
-                alt="상품이미지"
-                class="relatedContents__img"
-              />
+              <img src="/images/imggray_bg.png" alt="상품이미지" class="relatedContents__img" />
               <p class="relatedContents__title">로지텍 키보드</p>
               <p class="relatedContents__price">80,000원</p>
             </a>
