Design: Add Euid App UI main - 메인 페이지 CSS 초안
    메인 페이지 - 메인(홈)페이지 부분의 CSS 초안입니다.
    swiper 적용과 별개로, 시안의 UI와 유사하게 적용하였습니다.

    fixes: 추후 요구 사항반영 및 자바스크립트(swiper 등) 적용으로 구조 변경 가능성 있음

--- a/client/views/main/main.html
+++ b/client/views/main/main.html
@@ -10,7 +10,7 @@
       crossorigin
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.7/dist/web/static/pretendard-dynamic-subset.css"
     />
-    <link rel="stylesheet" href="/style/index.css" />
+    <link rel="stylesheet" href="./../../css/main.css" />
   </head>
 
   <body>
@@ -18,27 +18,44 @@
 
     <header>
       <h2 class="a11yHidden">기본 정보</h2>
-      <div class="timeWrapper">
-        <time class="timeInfo" datetime="2023-06-25T02:26">2:26</time>
-        <ul class="cellInfo">
+      <div class="flex justify-between items-center pt-2 px-4">
+        <time class="inline-block text-sm font-semibold" datetime="2023-06-25T02:26">2:26</time>
+        <ul class="flex justify-start items-start border-0">
           <li class="cellItem">
-            <span class="sprite spriteSensitivity"></span>
+            <span
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-95px_-8px] ml-[5px]"
+            ></span>
             <span class="a11yHidden">수신감도</span>
           </li>
           <li class="cellItem">
-            <span class="sprite spriteLte"></span>
+            <span
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-121px_-7px]"
+            ></span>
             <span class="a11yHidden">데이터 종류</span>
           </li>
           <li class="cellItem">
-            <span class="sprite spriteBattery"></span>
+            <span
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-148px_-8px] ml-[5px]"
+            ></span>
             <span class="a11yHidden">배터리 잔량</span>
           </li>
         </ul>
       </div>
-      <div class="statusBar">
-        <div class="selectLocation">
-          <label for="headerSelect">남가좌제2동 ▼</label
-          ><select id="headerSelect">
+      <div class="relative flex justify-start items-center gap-x-2 w-full h-10 px-4 pb-2">
+        <div
+          class="grow relative z-[1] before:content-[''] before:absolute before:w-0 before:h-0 before:ml-[30px] before:-mt-px before:right-[15px] before:top-2/4"
+        >
+          <label
+            for="headerSelect"
+            class="absolute w-4/5 z-[-1] text-lg font-bold py-2 top-[0.1875rem]"
+            >남가좌제2동<span
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-155px_-70px] ml-[5px]"
+            ></span></label
+          ><select
+            id="headerSelect"
+            class="w-full h-auto leading-[normal] opacity-0 appearance-none px-[0.8125rem] py-2 border-0"
+          >
+            .
             <option value="남가좌제1동">남가좌제1동</option>
             <option value="남가좌제2동" selected>남가좌제2동</option>
             <option value="북가좌제1동">북가좌제1동</option>
@@ -47,50 +64,94 @@
             <option value="신촌동">신촌동</option>
           </select>
         </div>
-        <ul class="headerList">
-          <li class="headerItem">
-            <a class="sprite spriteSearch" href="/" aria-label="검색" tabindex="0"></a>
+        <ul class="flex w-[86px] h-[26px] justify-evenly mt-3">
+          <li class="w-[25px] h-[25px] pl-2.5">
+            <a
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-196px_-8px] ml-[5px] mt-1"
+              href="/"
+              aria-label="검색"
+              tabindex="0"
+            ></a>
           </li>
-          <li class="headerItem">
-            <a class="sprite spriteMenu" href="/" aria-label="메뉴" tabindex="0"></a>
+          <li class="w-[25px] h-[25px] pl-2.5">
+            <a
+              class="inline-block bg-[url('./../../assets/icons/Icon/hamburger.svg')] bg-no-repeat w-5 h-5 ml-[3px] mt-0.5"
+              href="/"
+              aria-label="메뉴"
+              tabindex="0"
+            ></a>
           </li>
-          <li class="headerItem">
-            <a class="sprite spriteAlarm" href="/" aria-label="알림" tabindex="0"></a>
+          <li class="w-[25px] h-[25px] pl-2.5">
+            <a
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-269px_-116px] ml-[5px] mt-1"
+              href="/"
+              aria-label="알림"
+              tabindex="0"
+            ></a>
           </li>
         </ul>
       </div>
     </header>
 
-    <nav class="commonNav">
+    <nav
+      class="bg-white sticky w-full max-w-full border-t-[rgb(214,214,214)] border-t-0 border-solid bottom-0 border border-gray-200 shadow-md rounded-t-lg"
+    >
       <h2 class="a11yHidden">메뉴</h2>
-      <ul class="commonList">
-        <li class="">
-          <a href="./main.html" class="commonLink">
-            <span class="sprite spriteFillHome"></span>
+      <ul
+        class="z-10 w-[calc(100%_-_1.5rem)] max-w-xs flex justify-between gap-3 bg-white items-stretch font-normal text-[0.6875rem] fixed mx-auto pt-0 pb-2 px-2 bottom-0"
+      >
+        <li class="flex-1">
+          <a
+            href="./main.html"
+            class="flex flex-col justify-center items-center gap-[0.1875rem] py-2"
+          >
+            <span
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[0px_-74px]"
+            ></span>
             <span>홈</span>
           </a>
         </li>
-        <li class="">
-          <a href="../board/board.html" class="commonLink">
-            <span class="sprite spriteBoard"></span>
+        <li class="flex-1">
+          <a
+            href="../board/board.html"
+            class="flex flex-col justify-center items-center gap-[0.1875rem] py-2"
+          >
+            <span
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-72px_-46px]"
+            ></span>
             <span>게시판</span>
           </a>
         </li>
-        <li class="">
-          <a href="./exchange.html" class="commonLink">
-            <span class="sprite spritePlace"></span>
+        <li class="flex-1">
+          <a
+            href="./exchange.html"
+            class="flex flex-col justify-center items-center gap-[0.1875rem] py-2"
+          >
+            <span
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-106px_-91px]"
+            ></span>
             <span>내 근처</span>
           </a>
         </li>
-        <li class="">
-          <a href="../qna/chatlists.html" class="commonLink">
-            <span class="sprite spriteChat"></span>
+        <li class="flex-1">
+          <a
+            href="../qna/chatlists.html"
+            class="flex flex-col justify-center items-center gap-[0.1875rem] py-2"
+          >
+            <span
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-51px_-73px]"
+            ></span>
             <span>채팅</span>
           </a>
         </li>
-        <li class="">
-          <a href="../profile/profile.html" class="commonLink">
-            <span class="sprite spriteMyPage"></span>
+        <li class="flex-1">
+          <a
+            href="../profile/profile.html"
+            class="flex flex-col justify-center items-center gap-[0.1875rem] py-2"
+          >
+            <span
+              class="inline-block bg-[url('./../../assets/icons/Icon/sprite.svg')] bg-no-repeat w-5 h-5 bg-[-99px_-46px]"
+            ></span>
             <span>나의 이름</span>
           </a>
         </li>
@@ -100,79 +161,201 @@
     <main>
       <h2 class="a11yHidden">메인 메뉴</h2>
 
-      <section class="swiperWrapper">
+      <section class="relative w-full h-[15.9375rem] bg-[#9DA1B4]">
         <h3 class="a11yHidden">개발자 이야기</h3>
-        <p class="swiperText">풀리지 않는 버그 속 개발자로 살아남기</p>
-        <img class="swiperImg" src="/images/mainPage_ad.png" alt="" />
-        <a href="/" class="swiperLink">자세히 보기</a>
-        <div class="swiperNumber">
-          <span class="swiperNo1">01</span>
-          <img src="/images/bar.png" alt="" class="swiperLine" aria-hidden="true" />
-          <span class="swiperNo3">03</span>
+        <p
+          class="text-white font-medium text-lg absolute w-[9.1875rem] leading-normal left-[30px] top-[30px]"
+        >
+          풀리지 않는 버그 속 개발자로 살아남기
+        </p>
+        <img
+          class="absolute w-[13.75rem] right-0 bottom-0"
+          src="./../../assets/images/mainAd.png"
+          alt="두 남자가 뒤를 보며 파이팅 하는 모습"
+        />
+        <a href="/" class="text-white absolute text-[11px] left-[30px] top-[85px]">자세히 보기</a>
+        <div class="text-white text-[11px]">
+          <span class="absolute left-[1.875rem] top-[11.5rem]">01</span>
+          <img
+            src="./../../assets/images/bar.png"
+            alt="캐로셀 페이지바"
+            class="absolute left-[2.9375rem] top-[12rem]"
+            aria-hidden="true"
+          />
+          <span class="absolute left-[5.9375rem] top-[11.5rem]">03</span>
         </div>
       </section>
 
       <nav>
         <h3 class="a11yHidden">메인페이지 네비게이션</h3>
-        <ul class="mainNav">
+        <ul
+          class="w-full text-[rgba(255,255,255,0.5)] flex justify-around items-stretch font-normal gap-2 px-2 py-2.5 bg-[#373f67]"
+        >
           <li class="mainList">
-            <a href="./main.html" class="mainLink accentColor">선배님 스토리</a>
+            <a href="./main.html" class="text-sm py-1 font-semibold text-[white]">선배님 스토리</a>
           </li>
           <li class="mainList">
-            <a href="./exchange.html" class="mainLink">기기 거래</a>
+            <a href="./exchange.html" class="text-sm py-2">기기 거래</a>
           </li>
           <li class="mainList">
-            <a href="/" class="mainLink">질의 응답</a>
+            <a href="/" class="text-sm py-2">질의 응답</a>
           </li>
           <li class="mainList">
-            <a href="/" class="mainLink">함께 해요</a>
+            <a href="/" class="text-sm py-2">함께 해요</a>
           </li>
         </ul>
       </nav>
-
-      <section class="storyField">
+      <section>
         <h2 class="a11yHidden">선배님 스토리</h2>
-        <ul class="storyList">
-          <li class="storyItem">
+        <ul class="flex flex-wrap mt-3 mb-[3.75rem] px-3 py-0 h-[calc(100%_-_350px)] overflow-auto gap-4">
+          <li class="w-[138px] pb-2">
             <a href="/" class="">
-              <img class="storyImg" src="/images/imggray_bg.png" alt="프로필사진" />
-              <p class="storyTitle">디자인에 대해 하나도 알지 못했던 내가 취업할 수 있었던 이유</p>
-              <p class="storyUser">UIUX <span aria-hidden="true">&#124;</span> 1기 수강생 박치열</p>
+              <img
+                class="w-full h-auto mb-2"
+                src="./../../assets/images/storyBg.png"
+                alt="프로필사진"
+              />
+              <p class="leading-normal text-[11px]">
+                디자인에 대해 하나도 알지 못했던 내가 취업할 수 있었던 이유
+              </p>
+              <p class="text-[0.6875rem] leading-loose text-[#a7a7a7]">
+                UIUX <span aria-hidden="true">&#124;</span> 1기 수강생 박치열
+              </p>
             </a>
-          </li>
-          <li class="storyItem">
+          </l gap-i>
+          <li class="w-[138px] pb-2">
             <a href="/" class="">
-              <img class="storyImg" src="/images/imggray_bg.png" alt="프로필사진" />
-              <p class="storyTitle">영문과 전공생에서 UIUX 디자이너로 취업하기까지</p>
-              <p class="storyUser">UIUX <span aria-hidden="true">&#124;</span> 3기 수강생 김진우</p>
+              <img
+                class="w-full h-auto mb-2"
+                src="./../../assets/images/storyBg.png"
+                alt="프로필사진"
+              />
+              <p class="leading-normal text-[0.6875rem]">
+                영문과 전공생에서 UIUX 디자이너로 취업하기까지
+              </p>
+              <p class="text-[0.6875rem] leading-loose text-[#a7a7a7]">
+                UIUX <span aria-hidden="true">&#124;</span> 3기 수강생 김진우
+              </p>
             </a>
-          </li>
-          <li class="storyItem">
+          </l gap-i>
+          <li class="w-[138px] pb-2">
             <a href="/" class="">
-              <img class="storyImg" src="/images/imggray_bg.png" alt="프로필사진" />
-              <p class="storyTitle">7기 수강생의 삼성으로 가는 피그마 노하우</p>
-              <p class="storyUser">UIUX <span aria-hidden="true">&#124;</span> 7기 수강생 김삼성</p>
+              <img
+                class="w-full h-auto mb-2"
+                src="./../../assets/images/storyBg.png"
+                alt="프로필사진"
+              />
+              <p class="leading-normal text-[0.6875rem]">
+                7기 수강생의 삼성으로 가는 피그마 노하우
+              </p>
+              <p class="text-[0.6875rem] leading-loose text-[#a7a7a7]">
+                UIUX <span aria-hidden="true">&#124;</span> 7기 수강생 김삼성
+              </p>
             </a>
-          </li>
-          <li class="storyItem">
-            <a href="/" class="storyTitle">
-              <img class="storyImg" src="/images/imggray_bg.png" alt="프로필사진" />
-              <p class="storyTitle">배울 때 내가 가장 힘들었던 A-Z 야, 너도 할 수 있어!</p>
-              <p class="storyUser">UIUX <span aria-hidden="true">&#124;</span> 4기 수강생 김환휘</p>
+          </l gap-i>
+          <li class="w-[138px] pb-2">
+            <a href="/" class="leading-normal text-[0.6875rem]">
+              <img
+                class="w-full h-auto mb-2"
+                src="./../../assets/images/storyBg.png"
+                alt="프로필사진"
+              />
+              <p class="leading-normal text-[0.6875rem]">
+                배울 때 내가 가장 힘들었던 A-Z 야, 너도 할 수 있어!
+              </p>
+              <p class="text-[0.6875rem] leading-loose text-[#a7a7a7]">
+                UIUX <span aria-hidden="true">&#124;</span> 4기 수강생 김환휘
+              </p>
             </a>
-          </li>
-          <li class="storyItem">
+          </l gap-i>
+          <li class="w-[138px] pb-2">
             <a href="/" class="">
-              <img class="storyImg" src="/images/imggray_bg.png" alt="프로필사진" />
-              <p class="storyTitle">나는 프론트일까? 백일까? 여전히 모르겠다면 물어봐!</p>
-              <p class="storyUser">UIUX <span aria-hidden="true">&#124;</span> 2기 수강생 최혜수</p>
+              <img
+                class="w-full h-auto mb-2"
+                src="./../../assets/images/storyBg.png"
+                alt="프로필사진"
+              />
+              <p class="text-[11.5px] leading-normal text-[0.6875rem]">
+                나는 프론트일까? 백일까? 여전히 모르겠다면 물어봐!
+              </p>
+              <p class="text-[0.6875rem] leading-loose text-[#a7a7a7]">
+                UIUX <span aria-hidden="true">&#124;</span> 2기 수강생 최혜수
+              </p>
             </a>
-          </li>
-          <li class="storyItem">
+          </l gap-i>
+          <li class="w-[138px] pb-2">
             <a href="/" class="">
-              <img class="storyImg" src="/images/imggray_bg.png" alt="프로필사진" />
-              <p class="storyTitle">코딩과 디자인의 그 어딘가 두가지 모두 하고 싶은 욕심쟁이</p>
-              <p class="storyUser">UIUX <span aria-hidden="true">&#124;</span> 5기 수강생 염진희</p>
+              <img
+                class="w-full h-auto mb-2"
+                src="./../../assets/images/storyBg.png"
+                alt="프로필사진"
+              />
+              <p class="text-[11.5px] leading-normal text-[0.6875rem]">
+                코딩과 디자인의 그 어딘가 두가지 모두 하고 싶은 욕심쟁이
+              </p>
+              <p class="text-[0.6875rem] leading-loose text-[#a7a7a7]">
+                UIUX <span aria-hidden="true">&#124;</span> 5기 수강생 염진희
+              </p>
+            </a>
+          </l gap-i>
+          <li class="w-[138px] pb-2">
+            <a href="/" class="">
+              <img
+                class="w-full h-auto mb-2"
+                src="./../../assets/images/storyBg.png"
+                alt="프로필사진"
+              />
+              <p class="leading-normal text-[11px]">
+                디자인에 대해 하나도 알지 못했던 내가 취업할 수 있었던 이유
+              </p>
+              <p class="text-[0.6875rem] leading-loose text-[#a7a7a7]">
+                UIUX <span aria-hidden="true">&#124;</span> 1기 수강생 박치열
+              </p>
+            </a>
+          </l gap-i>
+          <li class="w-[138px] pb-2">
+            <a href="/" class="">
+              <img
+                class="w-full h-auto mb-2"
+                src="./../../assets/images/storyBg.png"
+                alt="프로필사진"
+              />
+              <p class="leading-normal text-[0.6875rem]">
+                영문과 전공생에서 UIUX 디자이너로 취업하기까지
+              </p>
+              <p class="text-[0.6875rem] leading-loose text-[#a7a7a7]">
+                UIUX <span aria-hidden="true">&#124;</span> 3기 수강생 김진우
+              </p>
+            </a>
+          </l gap-i>
+          <li class="w-[138px] pb-2">
+            <a href="/" class="">
+              <img
+                class="w-full h-auto mb-2"
+                src="./../../assets/images/storyBg.png"
+                alt="프로필사진"
+              />
+              <p class="leading-normal text-[0.6875rem]">
+                7기 수강생의 삼성으로 가는 피그마 노하우
+              </p>
+              <p class="text-[0.6875rem] leading-loose text-[#a7a7a7]">
+                UIUX <span aria-hidden="true">&#124;</span> 7기 수강생 김삼성
+              </p>
+            </a>
+          </l gap-i>
+          <li class="w-[138px] pb-2">
+            <a href="/" class="leading-normal text-[0.6875rem]">
+              <img
+                class="w-full h-auto mb-2"
+                src="./../../assets/images/storyBg.png"
+                alt="프로필사진"
+              />
+              <p class="leading-normal text-[0.6875rem]">
+                배울 때 내가 가장 힘들었던 A-Z 야, 너도 할 수 있어!
+              </p>
+              <p class="text-[0.6875rem] leading-loose text-[#a7a7a7]">
+                UIUX <span aria-hidden="true">&#124;</span> 4기 수강생 김환휘
+              </p>
             </a>
           </li>
         </ul>
