--- a/client/css/main.css
+++ b/client/css/main.css
@@ -534,12 +534,153 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed {
+  position: fixed;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.sticky {
+  position: sticky;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.left-\[1\.875rem\] {
+  left: 1.875rem;
+}
+
+.left-\[2\.9375rem\] {
+  left: 2.9375rem;
+}
+
+.left-\[30px\] {
+  left: 30px;
+}
+
+.left-\[5\.9375rem\] {
+  left: 5.9375rem;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.top-\[0\.1875rem\] {
+  top: 0.1875rem;
+}
+
+.top-\[11\.5rem\] {
+  top: 11.5rem;
+}
+
+.top-\[12rem\] {
+  top: 12rem;
+}
+
+.top-\[30px\] {
+  top: 30px;
+}
+
+.top-\[85px\] {
+  top: 85px;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.z-\[-1\] {
+  z-index: -1;
+}
+
+.z-\[1\] {
+  z-index: 1;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-\[3\.75rem\] {
+  margin-bottom: 3.75rem;
+}
+
+.ml-\[3px\] {
+  margin-left: 3px;
+}
+
+.ml-\[5px\] {
+  margin-left: 5px;
+}
+
+.mt-0 {
+  margin-top: 0px;
+}
+
+.mt-0\.5 {
+  margin-top: 0.125rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.inline-block {
+  display: inline-block;
+}
+
 .flex {
   display: flex;
 }
 
+.inline-flex {
+  display: inline-flex;
+}
+
+.grid {
+  display: grid;
+}
+
 .hidden {
   display: none;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-\[15\.9375rem\] {
+  height: 15.9375rem;
+}
+
+.h-\[25px\] {
+  height: 25px;
+}
+
+.h-\[26px\] {
+  height: 26px;
 }
 
 .h-\[30\.73px\] {
@@ -558,6 +699,46 @@ video {
   height: 693px;
 }
 
+.h-auto {
+  height: auto;
+}
+
+.h-4 {
+  height: 1rem;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-\[32\.6875rem\] {
+  height: 32.6875rem;
+}
+
+.h-\[calc\(100\%_-_351px\)\] {
+  height: calc(100% - 351px);
+}
+
+.h-\[calc\(100\%_-_350px\)\] {
+  height: calc(100% - 350px);
+}
+
+.w-4\/5 {
+  width: 80%;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-\[13\.75rem\] {
+  width: 13.75rem;
+}
+
+.w-\[25px\] {
+  width: 25px;
+}
+
 .w-\[301px\] {
   width: 301px;
 }
@@ -570,20 +751,238 @@ video {
   width: 84.5px;
 }
 
+.w-\[86px\] {
+  width: 86px;
+}
+
+.w-\[9\.1875rem\] {
+  width: 9.1875rem;
+}
+
 .w-\[\] {
   width: ;
+}
+
+.w-\[calc\(100\%_-_24px\)\] {
+  width: calc(100% - 24px);
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-6 {
+  width: 1.5rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-\[calc\(100\%_-_1\.5rem\)\] {
+  width: calc(100% - 1.5rem);
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-\[138px\] {
+  width: 138px;
+}
+
+.max-w-full {
+  max-width: 100%;
+}
+
+.max-w-xs {
+  max-width: 20rem;
+}
+
+.flex-1 {
+  flex: 1 1 0%;
+}
+
+.grow {
+  flex-grow: 1;
 }
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
+.grid-cols-\[repeat\(2\2c 1fr\)\] {
+  grid-template-columns: repeat(2,1fr);
+}
+
+.grid-rows-\[auto\] {
+  grid-template-rows: auto;
+}
+
 .flex-col {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.items-start {
+  align-items: flex-start;
+}
+
 .items-center {
   align-items: center;
+}
+
+.items-stretch {
+  align-items: stretch;
+}
+
+.justify-start {
+  justify-content: flex-start;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
+}
+
+.justify-evenly {
+  justify-content: space-evenly;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.gap-\[3px\] {
+  gap: 3px;
+}
+
+.gap-\[2px\] {
+  gap: 2px;
+}
+
+.gap-\[1px\] {
+  gap: 1px;
+}
+
+.gap-\[0\.1875rem\] {
+  gap: 0.1875rem;
+}
+
+.gap-\[0\.75rem\] {
+  gap: 0.75rem;
+}
+
+.gap-\[0\.5rem\] {
+  gap: 0.5rem;
+}
+
+.gap-\[0\.25rem\] {
+  gap: 0.25rem;
+}
+
+.gap-\[0\.2rem\] {
+  gap: 0.2rem;
+}
+
+.gap-\[0\.1rem\] {
+  gap: 0.1rem;
+}
+
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
+
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+
+.gap-y-0 {
+  row-gap: 0px;
+}
+
+.overflow-auto {
+  overflow: auto;
+}
+
+.rounded-t-lg {
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+}
+
+.border-0 {
+  border-width: 0px;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-t {
+  border-top-width: 1px;
+}
+
+.border-t-0 {
+  border-top-width: 0px;
+}
+
+.border-solid {
+  border-style: solid;
+}
+
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-t-\[rgb\(214\2c 214\2c 214\)\] {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(214 214 214 / var(--tw-border-opacity));
+}
+
+.bg-\[\#373f67\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 63 103 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#9DA1B4\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(157 161 180 / var(--tw-bg-opacity));
 }
 
 .bg-red-50 {
@@ -601,8 +1000,326 @@ video {
   background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[-4px-74px\] {
+  background-color: -4px-74px;
+}
+
+.bg-\[-4px-4px\] {
+  background-color: -4px-4px;
+}
+
+.bg-\[-4px-104px\] {
+  background-color: -4px-104px;
+}
+
+.bg-\[-84px-91px\] {
+  background-color: -84px-91px;
+}
+
+.bg-\[-99x_-46px\] {
+  background-color: -99x -46px;
+}
+
+.bg-\[url\(\'\.\/\.\.\/\.\.\/assets\/icons\/Icon\/hamburger\.svg\'\)\] {
+  background-image: url('./../../assets/icons/Icon/hamburger.svg');
+}
+
+.bg-\[url\(\'\.\/\.\.\/\.\.\/assets\/icons\/Icon\/sprite\.svg\'\)\] {
+  background-image: url('./../../assets/icons/Icon/sprite.svg');
+}
+
+.bg-\[-121px_-7px\] {
+  background-position: -121px -7px;
+}
+
+.bg-\[-148px_-8px\] {
+  background-position: -148px -8px;
+}
+
+.bg-\[-155px_-70px\] {
+  background-position: -155px -70px;
+}
+
+.bg-\[-196px_-8px\] {
+  background-position: -196px -8px;
+}
+
+.bg-\[-269px_-116px\] {
+  background-position: -269px -116px;
+}
+
+.bg-\[-95px_-8px\] {
+  background-position: -95px -8px;
+}
+
+.bg-\[-4px_-74px\] {
+  background-position: -4px -74px;
+}
+
+.bg-\[-5px_-74px\] {
+  background-position: -5px -74px;
+}
+
+.bg-\[-6px_-74px\] {
+  background-position: -6px -74px;
+}
+
+.bg-\[-10px_-74px\] {
+  background-position: -10px -74px;
+}
+
+.bg-\[-12px_-74px\] {
+  background-position: -12px -74px;
+}
+
+.bg-\[-3px_-74px\] {
+  background-position: -3px -74px;
+}
+
+.bg-\[-2px_-74px\] {
+  background-position: -2px -74px;
+}
+
+.bg-\[-1px_-74px\] {
+  background-position: -1px -74px;
+}
+
+.bg-\[-1px_-70px\] {
+  background-position: -1px -70px;
+}
+
+.bg-\[-1px_-65px\] {
+  background-position: -1px -65px;
+}
+
+.bg-\[-1px_-60px\] {
+  background-position: -1px -60px;
+}
+
+.bg-\[-1px_-55px\] {
+  background-position: -1px -55px;
+}
+
+.bg-\[-1px_-50px\] {
+  background-position: -1px -50px;
+}
+
+.bg-\[-78px_-46px\] {
+  background-position: -78px -46px;
+}
+
+.bg-\[-80px_-46px\] {
+  background-position: -80px -46px;
+}
+
+.bg-\[-85px_-46px\] {
+  background-position: -85px -46px;
+}
+
+.bg-\[-75px_-46px\] {
+  background-position: -75px -46px;
+}
+
+.bg-\[-106px_-90px\] {
+  background-position: -106px -90px;
+}
+
+.bg-\[-106px_-88px\] {
+  background-position: -106px -88px;
+}
+
+.bg-\[-106px_-86px\] {
+  background-position: -106px -86px;
+}
+
+.bg-\[-106px_-91px\] {
+  background-position: -106px -91px;
+}
+
+.bg-\[-106px_-92px\] {
+  background-position: -106px -92px;
+}
+
+.bg-\[0px_-74px\] {
+  background-position: 0px -74px;
+}
+
+.bg-\[-73px_-46px\] {
+  background-position: -73px -46px;
+}
+
+.bg-\[-72px_-46px\] {
+  background-position: -72px -46px;
+}
+
+.bg-\[-51px_-73px\] {
+  background-position: -51px -73px;
+}
+
+.bg-\[-101px_-46px\] {
+  background-position: -101px -46px;
+}
+
+.bg-\[-100px_-46px\] {
+  background-position: -100px -46px;
+}
+
+.bg-\[-99px_-46px\] {
+  background-position: -99px -46px;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-\[0\.8125rem\] {
+  padding-left: 0.8125rem;
+  padding-right: 0.8125rem;
+}
+
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-2\.5 {
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pl-2\.5 {
+  padding-left: 0.625rem;
+}
+
+.pt-0 {
+  padding-top: 0px;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-\[0\.6875rem\] {
+  font-size: 0.6875rem;
+}
+
+.text-\[11\.5px\] {
+  font-size: 11.5px;
+}
+
+.text-\[11px\] {
+  font-size: 11px;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.font-medium {
+  font-weight: 500;
+}
+
+.font-normal {
+  font-weight: 400;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.leading-\[normal\] {
+  line-height: normal;
+}
+
+.leading-loose {
+  line-height: 2;
+}
+
+.leading-normal {
+  line-height: 1.5;
+}
+
+.text-\[\#a7a7a7\] {
+  --tw-text-opacity: 1;
+  color: rgb(167 167 167 / var(--tw-text-opacity));
+}
+
+.text-\[rgba\(255\2c 255\2c 255\2c 0\.5\)\] {
+  color: rgba(255,255,255,0.5);
+}
+
+.text-\[white\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-indigo-500 {
@@ -610,3 +1327,119 @@ video {
   color: rgb(99 102 241 / var(--tw-text-opacity));
 }
 
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.opacity-0 {
+  opacity: 0;
+}
+
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.a11yHidden,
+  legend {
+  position: absolute;
+  margin: -1px;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  -webkit-clip-path: inset(50%);
+          clip-path: inset(50%);
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  margin-left: auto;
+  margin-right: auto;
+  height: 100%;
+  min-width: 20rem;
+  max-width: 20rem;
+  border-width: 1px;
+  border-style: solid;
+  --tw-border-opacity: 1;
+  border-color: rgb(233 233 233 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  --tw-shadow: rgba(0,0,0,0.16) 0px 0px 8px;
+  --tw-shadow-colored: 0px 0px 8px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  font-family:
+      Pretendard,
+      -apple-system,
+      BlinkMacSystemFont,
+      system-ui,
+      Roboto,
+      'Helvetica Neue',
+      'Segoe UI',
+      'Apple SD Gothic Neo',
+      'Noto Sans KR',
+      'Malgun Gothic',
+      'Apple Color Emoji',
+      'Segoe UI Emoji',
+      'Segoe UI Symbol',
+      sans-serif;
+  font: inherit;
+}
+
+/*.sprite {
+    display: inline-block;
+    background-image: url('./../../assets/icons/Icon/sprite.svg');
+    background-repeat: no-repeat;
+  }
+
+  .down {
+    width: 20px;
+    height: 20px;
+    margin-left: 5px;
+    background-position: -155px -70px;
+  }*/
+
+.before\:absolute::before {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.before\:right-\[15px\]::before {
+  content: var(--tw-content);
+  right: 15px;
+}
+
+.before\:top-2\/4::before {
+  content: var(--tw-content);
+  top: 50%;
+}
+
+.before\:-mt-px::before {
+  content: var(--tw-content);
+  margin-top: -1px;
+}
+
+.before\:ml-\[30px\]::before {
+  content: var(--tw-content);
+  margin-left: 30px;
+}
+
+.before\:h-0::before {
+  content: var(--tw-content);
+  height: 0px;
+}
+
+.before\:w-0::before {
+  content: var(--tw-content);
+  width: 0px;
+}
+
+.before\:content-\[\'\'\]::before {
+  --tw-content: '';
+  content: var(--tw-content);
+}
