--- a/client/css/tailwind.css
+++ b/client/css/tailwind.css
@@ -4,3 +4,45 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .a11yHidden,
+  legend {
+    @apply overflow-hidden absolute w-px h-px -m-px;
+    clip: rect(0, 0, 0, 0);
+    clip-path: inset(50%);
+  }
+  html {
+    height: 100%;
+  }
+  body {
+    @apply bg-white max-w-xs min-w-[20rem] h-full bg-white shadow-[rgba(0,0,0,0.16)_0px_0px_8px] border mx-auto border-solid border-[#e9e9e9];
+    font-family:
+      Pretendard,
+      -apple-system,
+      BlinkMacSystemFont,
+      system-ui,
+      Roboto,
+      'Helvetica Neue',
+      'Segoe UI',
+      'Apple SD Gothic Neo',
+      'Noto Sans KR',
+      'Malgun Gothic',
+      'Apple Color Emoji',
+      'Segoe UI Emoji',
+      'Segoe UI Symbol',
+      sans-serif;
+    font: inherit;
+  }
+  /*.sprite {
+    display: inline-block;
+    background-image: url('./../../assets/icons/Icon/sprite.svg');
+    background-repeat: no-repeat;
+  }
+
+  .down {
+    width: 20px;
+    height: 20px;
+    margin-left: 5px;
+    background-position: -155px -70px;
+  }*/
+}
